--- a/agentrobot_shematic.html
+++ b/agentrobot_shematic.html
@@ -84,8 +84,12 @@
     </p>
     <b> </b>
     <p><b>Драйвер двигателя L293D</b></p>
-    <p><b><br>
-      </b></p>
+    <p>Для печатной платы использовать версию L293DD в SO корпусе.</p>
+    <p><a href="https://app.ultralibrarian.com/details/bd9c9ecc-10a2-11e9-ab3a-0a3560a4cccc/STMicroelectronics/L293DD?uid=44ce8dc344819b09">https://app.ultralibrarian.com/details/bd9c9ecc-10a2-11e9-ab3a-0a3560a4cccc/STMicroelectronics/L293DD?uid=44ce8dc344819b09</a></p>
+    <p><br>
+    </p>
+    <p><br>
+    </p>
     <p><b>Разъем для подключения wifi</b></p>
     <p><br>
     </p>
