Choice of motor driver drv8833

--- a/agentrobot_shematic.html
+++ b/agentrobot_shematic.html
@@ -83,9 +83,29 @@
     <p><br>
     </p>
     <b> </b>
-    <p><b>Драйвер двигателя L293D</b></p>
-    <p>Для печатной платы использовать версию L293DD в SO корпусе.</p>
-    <p><a href="https://app.ultralibrarian.com/details/bd9c9ecc-10a2-11e9-ab3a-0a3560a4cccc/STMicroelectronics/L293DD?uid=44ce8dc344819b09">https://app.ultralibrarian.com/details/bd9c9ecc-10a2-11e9-ab3a-0a3560a4cccc/STMicroelectronics/L293DD?uid=44ce8dc344819b09</a></p>
+    <p><span style="color: silver;"><b>Драйвер двигателя L293D</b></span></p>
+    <p><span style="color: silver;">Для печатной платы использовать версию
+        L293DD в SO корпусе.</span></p>
+    <p><span style="color: silver;">Не подходит, т.к. питание микросхемы не
+        меньше 4.5 В (</span><span style="color: silver;">устаревший не mosfet)<br>
+      </span></p>
+    <p><span style="color: silver;"><a href="https://app.ultralibrarian.com/details/bd9c9ecc-10a2-11e9-ab3a-0a3560a4cccc/STMicroelectronics/L293DD?uid=44ce8dc344819b09">https://app.ultralibrarian.com/details/bd9c9ecc-10a2-11e9-ab3a-0a3560a4cccc/STMicroelectronics/L293DD?uid=44ce8dc344819b09</a></span></p>
+    <p><b><br>
+      </b></p>
+    <p><b>Драйвер двигателя</b></p>
+    <p>Сравнение <a href="https://youtu.be/3mfpERgAaWc">https://youtu.be/3mfpERgAaWc</a></p>
+    <p><a href="https://myrobot.ru/forum/topic.php?forum=9&amp;topic=179">https://myrobot.ru/forum/topic.php?forum=9&amp;topic=179</a></p>
+    <p>TB6612FNG - Toshiba +</p>
+    <p>DRV8833 - TI +++</p>
+    <p>DRV8835</p>
+    <p>DRV8836</p>
+    <p>L9110S - один мост -</p>
+    <p>L298N - устаревший не mosfet -</p>
+    <p>MX1508 - китай -</p>
+    <p><br>
+    </p>
+    <p>Выберем DRV8833 в корпусе HTSSOP-16, так как его модуль дешевле чем
+      TB6612FNG.</p>
     <p><br>
     </p>
     <p><br>
