--- a/bom.html
+++ b/bom.html
@@ -34,11 +34,10 @@
       https://altiumlibrary.com/<br>
       <br>
       https://www.ultralibrarian.com/<br>
-      <br>
     </p>
+    <p>DRV8833 в корпусе HTSSOP-16 </p>
     <p>BOM</p>
-    <p>
-    </p>
+    <p> </p>
     <table cellspacing="0" border="0">
       <colgroup width="32"></colgroup> <colgroup width="407"></colgroup> <colgroup
         width="187"></colgroup> <colgroup width="175"></colgroup> <colgroup width="99"></colgroup>
