--- a/list_electronics_components.html
+++ b/list_electronics_components.html
@@ -35,13 +35,15 @@
     <p><b>Управление двигателями</b></p>
     <p>Набор 1 </p>
     <ol>
-      <li><span style="color: #009900;">Микросхема L293D в корпусе dip 1 шт</span></li>
+      <li><span style="color: red;">Модуль драйвера двигателя DRV8833 в корпусе
+          HTSSOP-16 1 шт (робошоп)<br>
+        </span></li>
       <li>Датчик скорости двигателя Q86 170р (амперкот)</li>
       <li>Датчик скорости XD-51 50руб (амперкот)</li>
     </ol>
     <p>Набор 2</p>
     <ol>
-      <li>Микросхема L293D в корпусе so-20</li>
+      <li>DRV8833 в корпусе HTSSOP-16</li>
       <li>Оптопара (Посмотреть как сделан датчик скорости двигателя) 2 шт<br>
         Фотоприрыватель ITR9606 или ITR9608 (робошоп)</li>
     </ol>
