--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
       <p><a href="altium.html" target="_blank">Материалы по Altium</a></p>
       <p><a href="opencv.html" target="_blank">Материалы по OpenCV</a></p>
       <p><a href="other_links.html" target="_blank">Другие материалы</a></p>
+      <p><br>
+      </p>
+      <p><a href="diary.html">Дневник разработчика</a></p>
       <p>***************************</p>
       <h2>Основное</h2>
       <p>3D модель в ПО SolidWorks</p>
@@ -157,8 +160,13 @@
       <p>OpenCV</p>
       <p>SFML</p>
       <h2>TODO</h2>
-      <p><br>
-      </p>
+      <p>##############################################################</p>
+      <p>Модули которые крепятся сверху робота</p>
+      <ul>
+        <li>Модуль экрана 8 на 8</li>
+        <li><br>
+        </li>
+      </ul>
       <p><br>
       </p>
     </div>
