--- a/similar_projects.html
+++ b/similar_projects.html
@@ -12,7 +12,7 @@
     <p><a href="https://www.electronicshub.org/how-to-use-pwm-in-stm32f103c8t6/">https://www.electronicshub.org/how-to-use-pwm-in-stm32f103c8t6/</a></p>
     <p><a href="https://deepbluembedded.com/dc-motor-speed-control-l293d-motor-driver/">https://deepbluembedded.com/dc-motor-speed-control-l293d-motor-driver/</a></p>
     <p><a href="https://youtu.be/bna5cqX_yPc">https://youtu.be/bna5cqX_yPc</a></p>
-    <p><a href="https://youtu.be/njDowiCPqHI">https://youtu.be/njDowiCPqHI</a></p>
+    <p><a href="https://youtu.be/njDowiCPqHI">https://youtu.be/njDowiCPqHIo</a></p>
     <p><a href="https://youtu.be/6_43WsJML8A">https://youtu.be/6_43WsJML8A</a></p>
     <p><a href="https://www.sadra.dev/project/hw_designs/">https://www.sadra.dev/project/hw_designs/</a></p>
     <p><a href="https://www.reddit.com/r/PrintedCircuitBoard/comments/c9acu4/pcb_review_for_stm32_based_pcb/">https://www.reddit.com/r/PrintedCircuitBoard/comments/c9acu4/pcb_review_for_stm32_based_pcb/</a></p>
