--- a/agentrobot_shematic.html
+++ b/agentrobot_shematic.html
@@ -44,8 +44,7 @@
     <h2>Принципиальная схема</h2>
     <img src="img/shm1.jpg" alt="">
     <p>Схема 1</p>
-    <img src="file:///home/sergius/data/bsn/bsn-robotics.github.io/Private/agent_robot/img/shm2.jpg"
-      alt="" style="width: 377px; height: 197px;">
+    <img src="img/shm2.jpg" style="width: 377px; height: 197px;">
     <p>Схема 2</p>
     <p><br>
     </p>
