--- a/agentrobot_shematic.html
+++ b/agentrobot_shematic.html
@@ -63,6 +63,10 @@
     <p><a href="https://stm32-base.org/guides/setup">https://stm32-base.org/guides/setup</a></p>
     <p><br>
     </p>
+    <p><a href="https://stm32duinoforum.com/forum/wiki_subdomain/index_title_Blue_Pill.html">https://stm32duinoforum.com/forum/wiki_subdomain/index_title_Blue_Pill.html</a></p>
+    <p>f</p>
+    <p><br>
+    </p>
     <p><b>Проектирование в Altium Blue Pill design and BOM</b></p>
     <p>Blue Pill design and BOM <a href="https://easyeda.com/r3bers/STM32F103C8T6-Test-Board">https://easyeda.com/r3bers/STM32F103C8T6-Test-Board</a><span
         style="color: #cccccc;"><b><br>
@@ -290,6 +294,7 @@
     <p><b>PCAD</b></p>
     <p>EasyEDA vs Upverter vs KiCAD vs EAGLE&nbsp; <a href="https://youtu.be/LLVz4K23mFY">https://youtu.be/LLVz4K23mFY</a></p>
     <p>Российский след в западных EDA <a href="https://habr.com/ru/post/473694/">https://habr.com/ru/post/473694/</a></p>
+    <p>PCAD <a href="https://intuit.ru/studies/courses/674/530/lecture/11946">https://intuit.ru/studies/courses/674/530/lecture/11946</a></p>
     <p>f</p>
     <p><b><br>
       </b> </p>
