--- a/bom.html
+++ b/bom.html
@@ -29,11 +29,13 @@
       Компоненты на плату<br>
       <br>
       &nbsp;&nbsp;&nbsp; Конденсатор 1000 мкФ 50В<br>
-      &nbsp;&nbsp;&nbsp; Резистор 220 Ом<br>
+      &nbsp;&nbsp;&nbsp; Резистор 220 Ом</p>
+    <p><br>
+    </p>
+    <h3>Библиотеки компонентов</h3>
+    <p> <a href="https://altiumlibrary.com/">https://altiumlibrary.com/</a><br>
       <br>
-      https://altiumlibrary.com/<br>
-      <br>
-      https://www.ultralibrarian.com/<br>
+      <a href="https://www.ultralibrarian.com/">https://www.ultralibrarian.com/</a><br>
     </p>
     <p>DRV8833 в корпусе HTSSOP-16 </p>
     <p>========================================================</p>
