--- a/diary.html
+++ b/diary.html
@@ -10,6 +10,31 @@
     <p>Подбор кварца 8 Мгц, тип и footprint для платы.</p>
     <p>Подбор тактовой кнопки, тип и footprint для платы.</p>
     <p>См. список компонентов на плату.</p>
+    <h3>211111</h3>
+    <p>Выбор типоразмера светодиодов и резисторов.</p>
+    <p>Выбор разъема.</p>
+    <p>См. список компонентов на плату.</p>
+    <h3>211112</h3>
+    <p>Поиск доступного микроконтроллера, т.к. STM32f103c8t6 недоступен или
+      стоит дорого.</p>
+    <p>Подходит STM32f030k6t6, но надо понять насколько он отличается, какие у
+      него ЦАП и АЦП.</p>
+    <h3>211113</h3>
+    <p>-</p>
+    <h3>211114</h3>
+    <p>-</p>
+    <h3>211115</h3>
+    <p>-</p>
+    <h3><br>
+    </h3>
+    <p><br>
+    </p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
     <p></p>
   </body>
 </html>
