--- a/bom.html
+++ b/bom.html
@@ -51,6 +51,22 @@
     <p><a href="https://www.chipdip.ru/product/kls7-ts6601-5.0-180">https://www.chipdip.ru/product/kls7-ts6601-5.0-180</a></p>
     <p><br>
     </p>
+    <p><b>Разъем PLS</b></p>
+    <p>Сколько контактов в гребенке?<br>
+      <br>
+      Тип разъема?<br>
+      <a href="https://www.chipdip.ru/product/pls-10"><br>
+        https://www.chipdip.ru/product/pls-10</a><br>
+      <br>
+      <a href="https://www.promelec.ru/articles/530/">https://www.promelec.ru/articles/530/</a></p>
+    <p>f<br>
+    </p>
+    <p><b>Светодиоды 0603</b></p>
+    <p><a href="https://asenergi.com/catalog/svetodiody-smd/smd-0603.html">https://asenergi.com/catalog/svetodiody-smd/smd-0603.html</a></p>
+    <p><a href="https://go-radio.ru/razmery-smd-rezistorov.html">https://go-radio.ru/razmery-smd-rezistorov.html</a></p>
+    <p><a href="http://electricalschool.info/information/2052-smd-rezistory-vidy-parametry-i-harakteristiki.html">http://electricalschool.info/information/2052-smd-rezistory-vidy-parametry-i-harakteristiki.html</a></p>
+    <p><a href="https://pcbdesigner.ru/file-archive/korpusa-smd-chip-rezistorov-dlya-poverhnostnogo-smt-montazha-3d-cad-step-model.html">https://pcbdesigner.ru/file-archive/korpusa-smd-chip-rezistorov-dlya-poverhnostnogo-smt-montazha-3d-cad-step-model.html</a></p>
+    <p>а</p>
     <p><br>
     </p>
     <p>Библиотека компонентов pcad</p>
@@ -349,5 +365,6 @@
     <p>Источник</p>
     <p><a href="https://easyeda.com/r3bers/STM32F103C8T6-Test-Board">https://easyeda.com/r3bers/STM32F103C8T6-Test-Board</a></p>
     <p>а</p>
+    <br>
   </body>
 </html>
