--- a/diary.html
+++ b/diary.html
@@ -25,8 +25,55 @@
     <p>-</p>
     <h3>211115</h3>
     <p>-</p>
-    <h3><br>
-    </h3>
+    <h3>211116</h3>
+    <p>Сравнение различных микрокотроллеров STM32.</p>
+    <p>Выяснение обозначений что такой c8t6 или k6t6?</p>
+    <h3>211117</h3>
+    <p>Сделать таблицу сравнения</p>
+    <h3>211118</h3>
+    <p>-</p>
+    <h3>211119</h3>
+    <p>-</p>
+    <h3>211120</h3>
+    <p>-</p>
+    <h3>211121</h3>
+    <p>-<br>
+    </p>
+    <h3>211122</h3>
+    <p>-<br>
+    </p>
+    <h3>211123</h3>
+    <p>-<br>
+    </p>
+    <h3>211124</h3>
+    <p>-<br>
+    </p>
+    <h3>211125</h3>
+    <p>Как по выводам отличется f030 от f103.</p>
+    <p>Сдаелать заказ на youbot</p>
+    <h3>211126</h3>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p>Выбор источника питания</p>
+    <h3>211127</h3>
+    <p>-</p>
+    <h3>211128</h3>
+    <p>-</p>
+    <h3>211129</h3>
+    <p></p>
+    <p></p>
+    <p></p>
+    <p><br>
+    </p>
+    <br>
     <p><br>
     </p>
     <p></p>
