--- a/links_components.html
+++ b/links_components.html
@@ -53,6 +53,8 @@
     <p>Стабилизатор напряжения <a href="http://arduinkin.ru/index.php?route=product/product&amp;product_id=616">http://arduinkin.ru/index.php?route=product/product&amp;product_id=616</a></p>
     <p>RGB светодиод <a href="http://arduinkin.ru/index.php?route=product/product&amp;product_id=434">http://arduinkin.ru/index.php?route=product/product&amp;product_id=434</a></p>
     <p>Понижающий преобразователь <a href="http://arduinkin.ru/index.php?route=product/product&amp;product_id=606">http://arduinkin.ru/index.php?route=product/product&amp;product_id=606</a></p>
+    <h2>Электродвигатель</h2>
+    <p><a href="https://www.youbot.ru/product/dc-motor-s-reduktorom-ga12-n20-100prm-6v">https://www.youbot.ru/product/dc-motor-s-reduktorom-ga12-n20-100prm-6v</a></p>
     <p><br>
     </p>
     <h2>ESP-01</h2>
@@ -77,8 +79,7 @@
     <p><a href="https://spb.terraelectronica.ru/news/5878">https://spb.terraelectronica.ru/news/5878</a></p>
     <p><br>
     </p>
-    <p>
-    </p>
+    <p> </p>
     <p><b></b></p>
     <p></p>
   </body>
