--- a/agentrobot_shematic.html
+++ b/agentrobot_shematic.html
@@ -48,6 +48,8 @@
     <p>Схема 2</p>
     <p><br>
     </p>
+    <p>Общая принципиальная схема</p>
+    <img src="img/shm_main.svg" alt="" style="width: 1039px; height: 736px;">
     <p><br>
     </p>
     <p><br>
