--- a/agentrobot_mechanics.html
+++ b/agentrobot_mechanics.html
@@ -30,6 +30,15 @@
     <p><br>
     </p>
     <p>Про ремень gt2 <a href="https://youtu.be/f-VHd1S6BVk">https://youtu.be/f-VHd1S6BVk</a></p>
+    <p>===============================================================</p>
+    <h2>TODO</h2>
+    <ul>
+      <li>Переделать колесо, так чтобы ремень точно подходил.</li>
+      <li>Переделать корпус, чтобы помещался аккумулятор 16340 и не выступал за
+        размеры 50*38 мм</li>
+      <li>Переделать крепление колес, чтобы ремень не слезал с колеса, чтобы не
+        было перекоса осей колеса.</li>
+    </ul>
     <ul>
     </ul>
   </body>
