--- a/diary.html
+++ b/diary.html
@@ -68,14 +68,65 @@
     <h3>211128</h3>
     <p>-</p>
     <h3>211129</h3>
+    <p>-</p>
     <p></p>
     <p></p>
     <p></p>
-    <p><br>
+    <h3>211130</h3>
+    <p> </p>
+    <p> -</p>
+    <h3>211201</h3>
+    <p>-</p>
+    <h3>211202</h3>
+    <p>-</p>
+    <h3>211203</h3>
+    <p>-</p>
+    <h3>211204</h3>
+    <p>Смена микроконтроллера с stm32g030 на stm32f030 т.к. первого не оказалось
+      в наличии.</p>
+    <p></p>
+    <p>
     </p>
-    <br>
-    <p><br>
-    </p>
+    <p></p>
+    <h3>211205</h3>
+    <p>-</p>
+    <h3>211206</h3>
+    <p>-</p>
+    <h3>211207</h3>
+    <p>Заказал stm32g030 с сроком поставки более месяца для следующей версии
+      робота.</p>
+    <h3>211208</h3>
+    <p>Подбор smd резисторов и конденсаторов.</p>
+    <h3>211209</h3>
+    <p>Подбор smd резисторов и конденсаторов.</p>
+    <h3>211210</h3>
+    <p>Заказ stm32f030 и smd резисторов и конденсаторов.</p>
+    <p>Заказ отладочных плат для stm32f030 в Youbot и еще 3 шт drv8833.</p>
+    <h3>211211</h3>
+    <p>-</p>
+    <h3>211212</h3>
+    <p>Рисование принципиальной схемы для основной печатной платы робота.</p>
+    <h3>211213</h3>
+    <p>Забрал заказ из youbot.</p>
+    <h3>211214</h3>
+    <p>Начала изучение OpenCV и как распозанются Aruko маркеры. </p>
+    <h3>211215</h3>
+    <p>-</p>
+    <h3>211216</h3>
+    <p>-</p>
+    <h3>211217</h3>
+    <p>-</p>
+    <h3>211218</h3>
+    <p>-</p>
+    <h3>211219</h3>
+    <p>-</p>
+    <h3>211220</h3>
+    <p>Изучение raylib 4 для симулятора.</p>
+    <h3>211221</h3>
+    <p>Изучение raylib 4 для симулятора.</p>
+    <h3>211222</h3>
+    Добавление материлов по микронтроллеру в репозиторий.<br>
+    <p> </p>
     <p></p>
     <p></p>
     <p></p>
