--- a/system_control_and_cv.html
+++ b/system_control_and_cv.html
@@ -9,6 +9,7 @@
     <p>Qt - интерфейс</p>
     <p>OpenCV - распознавание маркера</p>
     <p>SFML - симулятор</p>
+    <p>raylib - симулятор</p>
     <p><br>
     </p>
     <p><br>
@@ -152,7 +153,25 @@ LD_LIBRARY_PATH=/media/sergius/C43A7E5B3A7E4B06/data/projects/ITMO/NIR/SFML/SFML
       соединенными. Если таким образом образуется замкнутый контур, то описать
       вокруг такого контура окружность.<br>
       Пятна ближайщие к окружность будут являться углами квадрата.</p>
+    <p>=============================================================</p>
+    <p>Статьи по обнаружению Arucko маркеров </p>
+    <p><a href="https://habr.com/ru/post/482220/">https://habr.com/ru/post/482220/</a></p>
+    <p><a href="https://docs.opencv.org/3.4/d5/dae/tutorial_aruco_detection.html">https://docs.opencv.org/3.4/d5/dae/tutorial_aruco_detection.html</a></p>
+    <p><a href="https://learnopencv.com/augmented-reality-using-aruco-markers-in-opencv-c-python/?ck_subscriber_id=524384115">https://learnopencv.com/augmented-reality-using-aruco-markers-in-opencv-c-python/?ck_subscriber_id=524384115</a></p>
+    <p>Thresholding</p>
+    <p>Perspective removing</p>
     <p><br>
     </p>
+    <p>Распознавание маркера дополненной реальности <a href="https://habr.com/ru/post/135659/">https://habr.com/ru/post/135659/</a></p>
+    <p><br>
+    </p>
+    <p>=============================================================</p>
+    <p>Видео в котором решается похожая задача</p>
+    <p><a href="https://youtu.be/BMpSJzTXnpk">https://youtu.be/BMpSJzTXnpk</a></p>
+    <p>а</p>
+    <p>=============================================================</p>
+    <p>raylib 4.0.0</p>
+    <p>export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:/usr/local/lib</p>
+    <br>
   </body>
 </html>
