--- a/diary.html
+++ b/diary.html
@@ -85,8 +85,7 @@
     <p>Смена микроконтроллера с stm32g030 на stm32f030 т.к. первого не оказалось
       в наличии.</p>
     <p></p>
-    <p>
-    </p>
+    <p> </p>
     <p></p>
     <h3>211205</h3>
     <p>-</p>
@@ -125,7 +124,21 @@
     <h3>211221</h3>
     <p>Изучение raylib 4 для симулятора.</p>
     <h3>211222</h3>
-    Добавление материлов по микронтроллеру в репозиторий.<br>
+    <p> Добавление материлов по микронтроллеру в репозиторий.</p>
+    <h3>211223</h3>
+    <p>OpenCVпробная программа</p>
+    <h3>211224</h3>
+    <p>OpenCVпробная программа</p>
+    <h3>211225</h3>
+    <p>-</p>
+    <h3>211226</h3>
+    <p>Рисовал печатныйю плату</p>
+    <h3>211227</h3>
+    <p>pcb_v1</p>
+    <h3>211228</h3>
+    <p><br>
+    </p>
+    <p> </p>
     <p> </p>
     <p></p>
     <p></p>
