--- a/bom.html
+++ b/bom.html
@@ -10,6 +10,7 @@
     <p><span style="color: #999999;">Микроконтроллер STM32F103C8T6 1 шт 290р
         (чип и дип )</span></p>
     <p>Микроконтроллер STM32F030C8T6 1 шт 170р (Электронщик)</p>
+    <p>Микроконтроллер STM32G030C8T6 1 шт 200р (ChipRange)</p>
     <p>Кварц 8 МГц 1 шт</p>
     <p>Кварц на 32.768 кГц 1 шт</p>
     <p>Линейный стабилизатор напряжения LM1117 TI (посмотреть как сделано на
@@ -30,6 +31,10 @@
     <p><a href="https://www.platan.ru/cgi-bin/qwery.pl/id=2013051596">https://www.platan.ru/cgi-bin/qwery.pl/id=2013051596</a></p>
     <p><a href="https://www.necspb.com/catalog/kvartsevye_rezonatory/12_84203_344125/">https://www.necspb.com/catalog/kvartsevye_rezonatory/12_84203_344125/</a></p>
     <p><a href="https://dirtypcbs.com/assets/datasheets/X49SD8MSD2SC.pdf">https://dirtypcbs.com/assets/datasheets/X49SD8MSD2SC.pdf</a></p>
+    <p><br>
+    </p>
+    <p>smd</p>
+    <p><a href="https://www.chipdip.ru/product/8mhz-hc-49sm">https://www.chipdip.ru/product/8mhz-hc-49sm</a></p>
     <p><br>
     </p>
     <p><b>Тактовая кнопка </b></p>
