--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           печатной платы</a></p>
       <p><a href="system_control_and_cv.html" target="_blank">Система управления
           и технического зрения</a></p>
+      <p><a href="ir_transmitter.html">Разработка передатчика ИК сигнала</a></p>
       <p><br>
       </p>
       <p><a href="list_electronics_components.html" target="_blank">Список
@@ -42,7 +43,9 @@
       <p><br>
       </p>
       <p><a href="altium.html" target="_blank">Материалы по Altium</a></p>
+      <p>Материалы по KiCAD</p>
       <p><a href="opencv.html" target="_blank">Материалы по OpenCV</a></p>
+      <p>Материалы по raylib</p>
       <p><a href="other_links.html" target="_blank">Другие материалы</a></p>
       <p><br>
       </p>
@@ -111,7 +114,14 @@
       <p>Таким образом, положение одного робота уточняется за счет оценки
         учитывающей положение другого робота.</p>
       <p>smprobotics</p>
-      <p>*******************************************</p>
+      <p>=============================================================</p>
+      <p>В v1 использовать для определения местоположения робота aruko маркеры.</p>
+      <p>Для подтверждения получения сообщения роботом использовать мигание
+        светодиода.</p>
+      <p>Сообщения с робота пока не отправлять.</p>
+      <p>В v2 реализовать отправку сообщений с робота либо с помощью
+        светодиодной матрицы, либо с помощью wifi модуля.</p>
+      <p>=============================================================</p>
       <p>Комплектующие выданного робота</p>
       <p>Nucleo MB1180&nbsp; rev C<br>
         F103C8T6<br>
@@ -167,7 +177,7 @@
         <li><br>
         </li>
       </ul>
-      <p><br>
+      <p>==============================================================<br>
       </p>
     </div>
   </body>
