--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <p><br>
       </p>
       <p><a href="altium.html" target="_blank">Материалы по Altium</a></p>
-      <p>Материалы по KiCAD</p>
+      <p><a href="kicad.html">Материалы по KiCAD</a></p>
       <p><a href="opencv.html" target="_blank">Материалы по OpenCV</a></p>
       <p>Материалы по raylib</p>
       <p><a href="other_links.html" target="_blank">Другие материалы</a></p>
